--- a/pom.xml
+++ b/pom.xml
@@ -343,6 +343,11 @@
                 <artifactId>maven-changelog-plugin</artifactId>
                 <version>2.3</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.19.1</version>
+            </plugin>
         </plugins>
     </reporting>
 </project>
