fix developer email

--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
         <developer>
             <id>moizjv</id>
             <name>Moiz Virani</name>
-            <email>moiz@saucelabs.comx </email>
+            <email>moiz@saucelabs.com</email>
             <organization>Sauce Labs</organization>
             <organizationUrl>http://www.saucelabs.com/</organizationUrl>
             <timezone>America/Los_Angeles</timezone>
