--- a/pom.xml
+++ b/pom.xml
@@ -135,7 +135,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=380m</argLine>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=380m -XX:MaxMetaspaceSize=380m</argLine>
                     <reuseForks>false</reuseForks>
                     <forkCount>${concurrency}</forkCount>
                 </configuration>
