--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <!-- don't run in parallel -->
         <concurrency>1C</concurrency>
         <github.global.server>github</github.global.server>
+        <github.global.oauth2Token>${env.GH_TOKEN}</github.global.oauth2Token>
         <!-- Baseline Jenkins version you use to build the plugin. Users must have this version or newer to run. -->
         <jenkins.version>1.609.2</jenkins.version>
         <!-- Java Level to use. Java 7 required when using core >= 1.612 -->
@@ -340,16 +341,6 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
                 <version>3.0.4</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-changelog-plugin</artifactId>
-                <version>2.3</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.19.1</version>
             </plugin>
         </plugins>
     </reporting>
